CURRIKI-3347 Resource View/Edit: Tabs Wrap Fix
svn@16282

--- a/web/src/main/webapp/skins/curriki8/views.css
+++ b/web/src/main/webapp/skins/curriki8/views.css
@@ -294,14 +294,6 @@ ul#asset-tabs li a:hover {
  	float: none; 
 }
 
-
-#asset-wrapper-inner, x:-moz-any-link {
- 	clear: none;
- 	float: left;
-}
-
-
-
 .asset-display-text {
 	clear: left;
 }
@@ -1237,9 +1229,9 @@ line-height: 21px !important;
 
 /** SERVE IE6 & IE7 **/
 
-
+/**
 * html #asset-wrapper-inner {clear: left !important; float: none !important;}
 
 *+html #asset-wrapper-inner {clear: left !important; float: none !important;}
-
+**/
 }
